--- a/stilark.css
+++ b/stilark.css
@@ -1,5 +1,5 @@
 h1 {
-color: blueviolet;
+color: rgb(255, 255, 255);
 }
 
 img {
@@ -7,6 +7,6 @@ img {
 }
 
 body {
-    background-color: rgb(81, 0, 255);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
 } 
