--- a/stilark.css
+++ b/stilark.css
@@ -1,10 +1,27 @@
 h1 {
-color: rgb(255, 255, 255);
+color: rgb(133, 11, 11);
 }
-
+p {
+    color: white;
+}
 img {
     max-width: 90%;
 }
+nav{
+    nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+
+    height: 75px;
+   
+   }
+}
+
 
 body {
     background-color: rgb(0, 0, 0);
