--- a/stilark.css
+++ b/stilark.css
@@ -1,29 +1,84 @@
 h1 {
-color: rgb(133, 11, 11);
+color: rgb(255, 255, 255);
 }
 p {
     color: white;
-}
-img {
-    max-width: 90%;
-}
-nav{
-    nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    text-align: bottom;
+    } 
+    .poppins-regular {
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+      style>
+      .button {
+          display: inline-block;
+          padding: 10px 20px;
+          background-color: #4CAF50;
+          color: white;
+          text-decoration: none;
+          border-radius: 5px;
+          text-align: center;
+      }
+      
+      .button:hover {
+          background-color: #45a049;
+      }
+      style>
+html, body {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+} 
 
+#todeling {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    gap: 20px;
 
-    height: 75px;
-   
-   }
-}
+    padding: 2rem;
+} 
+
+#venstre, #høyre {
+    flex: 3;
+
+} 
 
 
 body {
     background-color: rgb(0, 0, 0);
     color: aliceblue;
+    
 } 
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #ba4dbb;
+    color: white;
+  }
